src/deployment-types/blue-green/nginx-blue-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-blue
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
            version: blue
    template:
        metadata:
            labels:
                app: nginx
                version: blue
        spec:
            containers:
                - name: nginx
                  image: dhinojosa/simple-nginx:1.0.1
                  ports:
                      - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-green
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
            version: green
    template:
        metadata:
            labels:
                app: nginx
                version: green
        spec:
            containers:
                - name: nginx
                  image: dhinojosa/simple-nginx:1.0.4
                  ports:
                      - containerPort: 80
