src/deployment-types/blue-green/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-blue-green-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        -   host: localhost
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: nginx-service
                                port:
                                    number: 80
